--- a/composer.json
+++ b/composer.json
@@ -15,40 +15,42 @@
     "queue"
   ],
   "require": {
-    "php": ">=7.1",
-    "illuminate/contracts": ">=5.5",
-    "illuminate/database": ">=5.5",
-    "illuminate/queue": ">=5.5",
-    "illuminate/support": ">=5.5",
-    "nesbot/carbon": ">=1.21",
+    "php": "^8.3",
+    "illuminate/contracts": "^12.0",
+    "illuminate/database": "^12.0",
+    "illuminate/queue": "^12.0",
+    "illuminate/support": "^12.0",
+    "nesbot/carbon": "^3.0",
     "ext-json": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": ">=5.7",
-    "orchestra/testbench": ">=3.5",
-    "orchestra/database": ">=3.5",
-    "friendsofphp/php-cs-fixer": "^2.11"
+    "phpunit/phpunit": "^11.0",
+    "orchestra/testbench": "^9.0",
+    "laravel/pint": "^1.18"
   },
   "extra": {
     "laravel": {
       "providers": [
-        "Imtigger\\LaravelJobStatus\\LaravelJobStatusServiceProvider"
+        "Yannelli\\TrackJobStatus\\LaravelJobStatusServiceProvider"
       ]
     }
   },
   "autoload": {
     "psr-4": {
-      "Imtigger\\LaravelJobStatus\\": "src"
+      "Yannelli\\TrackJobStatus\\": "src"
     }
   },
   "autoload-dev": {
     "psr-4": {
-      "Imtigger\\LaravelJobStatus\\Tests\\": "tests",
-      "Imtigger\\LaravelJobStatus\\Tests\\Data\\": "tests/_data"
+      "Yannelli\\TrackJobStatus\\Tests\\": "tests",
+      "Yannelli\\TrackJobStatus\\Tests\\Data\\": "tests/_data"
     }
   },
   "scripts": {
-    "php-cs-fixer": "vendor/bin/php-cs-fixer fix --config=.php_cs",
-    "test": "composer php-cs-fixer && vendor/bin/phpunit"
-  }
+    "lint": "vendor/bin/pint",
+    "test": "vendor/bin/phpunit",
+    "test:coverage": "vendor/bin/phpunit --coverage"
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
